refactor: update scorer tests for provider architecture